Cleaned up site and fixed dark mode toggle

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,12 @@
 li {
     font-size: 18px;
 }
+
+#toggle {
+    border: 5px;
+    border-color: black;
+}
+
+#toggle_label {
+    color: white;
+}
